--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.9" manuallyInstalled="true" />
+  <package id="Microsoft.Data.Sqlite.Core" version="9.0.6" manuallyInstalled="true" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.1.11" manuallyInstalled="true" />
+  <package id="SQLitePCLRaw.core" version="2.1.11" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.1.11" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3" version="2.1.11" />
 </packages>
