--- a/World/config.json
+++ b/World/config.json
@@ -2,5 +2,7 @@
     "MaxPlayers": 10,
     "Port": 27682,
     "AllowRemoteClients": true,
-    "Motd": "Welcome to Larnix server!"
+    "Motd": "Welcome to Larnix server!",
+    "DataSavingPeriod": 0.0,
+    "EntityBroadcastPeriod": 0.0
 }
