Unity 6 & Ref<> refactors - 0.0.18

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,9 @@
         "MemoryCaptures": true,
         "LarnixRelay": true,
         "Packages": true,
-        "Builds": true
+        "Builds": true,
+        "**/*.csproj": true,
+        "Larnix.sln": true,
     },
     "dotnet.defaultSolution": "Larnix.slnx"
 }
