--- a/Assets/Assemblies/Socket/Larnix.Socket.asmdef
+++ b/Assets/Assemblies/Socket/Larnix.Socket.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "Larnix.Socket",
     "references": [
         "GUID:b9668968ef3fc7d40adac0aa4237498e",
-        "GUID:66752161c7a02a94986151fcf8653a3f"
+        "GUID:0c28fbad8b5c3054db7f3764ad782c12",
+        "GUID:9296d445484bbf741aad5477610d2921"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
